--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin Board</title>
     <style>
-        /* Feathered Glow Effect for Soft, Seamless Transition */
+        /* Feathered Glow Effect Using Pseudo-Element for a Smooth Transition */
         .hover-effect-feathered-glow {
             position: relative;
-            transition: box-shadow 0.5s ease-in-out;
+            transition: transform 0.4s ease-in-out;
         }
 
-        /* Adding a feathered glowing effect around the text */
-        .hover-effect-feathered-glow:hover {
-            box-shadow: 0 0 30px 15px rgba(255, 255, 255, 0.3);
+        .hover-effect-feathered-glow::before {
+            content: '';
+            position: absolute;
+            top: -15px;
+            left: -15px;
+            right: -15px;
+            bottom: -15px;
+            border-radius: 50%; /* Ensures a rounded, natural fade-out */
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.4), transparent 70%);
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+            pointer-events: none; /* Allows mouse events to pass through to the original element */
+        }
+
+        /* Hover effect to fade in the feathered glow */
+        .hover-effect-feathered-glow:hover::before {
+            opacity: 1;
         }
     </style>
 </head>
@@ -35,51 +49,41 @@
             </a>
         </div>
 
-        <!-- Links with Feathered Glow Effect -->
+        <!-- Links with Feathered Glow Effect Using Pseudo-Elements -->
 
         <!-- PHYSICAL FITNESS with Tooltip - Feathered Glow Effect -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=47938" target="_top">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 155px; left: 36px; width: 189px; height: 24px;" title="Physical Fitness" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/982851D1-BB36-503C-EE59-43F5A3BE1DED.png" alt="Physical Fitness">
+            <div class="hover-effect-feathered-glow" style="position: absolute; top: 155px; left: 36px; width: 189px; height: 24px;">
+                <img style="width: 100%; height: 100%;" title="Physical Fitness" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/982851D1-BB36-503C-EE59-43F5A3BE1DED.png" alt="Physical Fitness">
+            </div>
         </a>
 
         <!-- PRE-TRIP INSPECTION - Feathered Glow Effect -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_custom_activities.showUserCustomActivity&navIDs=1,10&courseid=614618" target="_top">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 185px; left: 36px; width: 226px; height: 24px;" title="Pre-Trip Inspection" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8875BFCB-286B-4EC6-67C2-12E03EF8B0D5.png" alt="Pre-Trip Inspection">
+            <div class="hover-effect-feathered-glow" style="position: absolute; top: 185px; left: 36px; width: 226px; height: 24px;">
+                <img style="width: 100%; height: 100%;" title="Pre-Trip Inspection" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8875BFCB-286B-4EC6-67C2-12E03EF8B0D5.png" alt="Pre-Trip Inspection">
+            </div>
         </a>
 
         <!-- AREA FAMILIARIZATION - Feathered Glow Effect -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=47936" target="_top">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 215px; left: 37px; width: 246px; height: 24px;" title="Area Familiarization" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E253508F-BA0C-59DC-471B-F1E2041FBC22.png" alt="Area Familiarization">
+            <div class="hover-effect-feathered-glow" style="position: absolute; top: 215px; left: 37px; width: 246px; height: 24px;">
+                <img style="width: 100%; height: 100%;" title="Area Familiarization" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E253508F-BA0C-59DC-471B-F1E2041FBC22.png" alt="Area Familiarization">
+            </div>
         </a>
 
         <!-- WATER LOG - Feathered Glow Effect -->
         <a href="" target="_blank" rel="noopener">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
-        </a>
-
-        <!-- BGL MONDAYS - Feathered Glow Effect -->
-        <a href="" target="_blank" rel="noopener">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
-        </a>
-
-        <!-- COMPANY TRAINING - Feathered Glow Effect -->
-        <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948089" target="_top">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 420px; left: 190px; width: 96px; height: 24px;" title="Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/F708BC7C-4822-20CC-AC34-1934BBBE9832.png" alt="Company Training">
-        </a>
-
-        <!-- DRIVER TRAINING - Feathered Glow Effect -->
-        <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948090" target="_top">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 450px; left: 190px; width: 82px; height: 24px;" title="Driver Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AEA20159-72A8-173D-FF20-D9FB9B472905.png" alt="Driver Training">
-        </a>
-
-        <!-- OFFICER TRAINING - Feathered Glow Effect -->
-        <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948093" target="_top">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 510px; left: 190px; width: 95px; height: 24px;" title="Officer Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E124536-7ADD-03D8-3985-9249D3CB60E6.png" alt="Officer Training">
+            <div class="hover-effect-feathered-glow" style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;">
+                <img style="width: 100%; height: 100%;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
+            </div>
         </a>
 
         <!-- SOP Standard Operating Guidelines - Feathered Glow Effect -->
         <a href="https://centrality.ci.palm-coast.fl.us/employeedashboard/home/fire" target="_blank" rel="noopener">
-            <img class="hover-effect-feathered-glow" style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
+            <div class="hover-effect-feathered-glow" style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;">
+                <img style="width: 100%; height: 100%;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
+            </div>
         </a>
     </div>
 </body>
