--- a/index.html
+++ b/index.html
@@ -5,30 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin Board</title>
     <style>
-        /* CSS for Apple-like Dock Effect */
-        .dock-effect {
+        /* MacBook Dock scroll effect */
+        a img:hover {
+            transform: scale(1.5);
+            transition: transform 0.3s ease;
+        }
+        a img {
             transition: transform 0.3s ease;
         }
 
-        .dock-effect:hover {
-            transform: scale(1.3);
-        }
-
-        /* CSS for Shake Effect on Arrows */
-        .shake-effect {
-            transition: transform 0.2s ease;
-        }
-
-        .shake-effect:hover {
-            transform: rotate(-10deg) translateX(-2px);
-            animation: shake 0.5s;
+        /* Shake effect for arrows */
+        .shake:hover {
+            animation: shake 0.3s;
+            animation-iteration-count: infinite;
         }
 
         @keyframes shake {
-            0%, 100% { transform: rotate(-10deg) translateX(-2px); }
-            25% { transform: rotate(10deg) translateX(2px); }
-            50% { transform: rotate(-10deg) translateX(-2px); }
-            75% { transform: rotate(10deg) translateX(2px); }
+            0% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            50% { transform: translateX(5px); }
+            75% { transform: translateX(-5px); }
+            100% { transform: translateX(0); }
         }
     </style>
 </head>
@@ -49,81 +46,127 @@
             </a>
         </div>
 
-        <!-- PHYSICAL FITNESS with Dock Effect -->
+        <!-- Links with MacBook Dock Scroll Effect -->
+        <!-- PHYSICAL FITNESS with Tooltip -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=47938" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 155px; left: 36px; width: 189px; height: 24px;" title="Physical Fitness" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/982851D1-BB36-503C-EE59-43F5A3BE1DED.png" alt="Physical Fitness">
+            <img style="position: absolute; top: 155px; left: 36px; width: 189px; height: 24px;" title="Physical Fitness" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/982851D1-BB36-503C-EE59-43F5A3BE1DED.png" alt="Physical Fitness">
         </a>
 
-        <!-- PRE-TRIP INSPECTION with Dock Effect -->
+        <!-- PRE-TRIP INSPECTION -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_custom_activities.showUserCustomActivity&navIDs=1,10&courseid=614618" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 185px; left: 36px; width: 226px; height: 24px;" title="Pre-Trip Inspection" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8875BFCB-286B-4EC6-67C2-12E03EF8B0D5.png" alt="Pre-Trip Inspection">
+            <img style="position: absolute; top: 185px; left: 36px; width: 226px; height: 24px;" title="Pre-Trip Inspection" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/8875BFCB-286B-4EC6-67C2-12E03EF8B0D5.png" alt="Pre-Trip Inspection">
         </a>
 
-        <!-- AREA FAMILIARIZATION with Dock Effect -->
+        <!-- AREA FAMILIARIZATION -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=47936" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 215px; left: 37px; width: 246px; height: 24px;" title="Area Familiarization" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E253508F-BA0C-59DC-471B-F1E2041FBC22.png" alt="Area Familiarization">
+            <img style="position: absolute; top: 215px; left: 37px; width: 246px; height: 24px;" title="Area Familiarization" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E253508F-BA0C-59DC-471B-F1E2041FBC22.png" alt="Area Familiarization">
         </a>
 
-        <!-- WATER LOG with Dock Effect -->
+        <!-- WATER LOG -->
         <a href="" target="_blank" rel="noopener">
-            <img class="dock-effect" style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
+            <img style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
         </a>
 
-        <!-- BGL MONDAYS with Dock Effect -->
+        <!-- BGL MONDAYS -->
         <a href="" target="_blank" rel="noopener">
-            <img class="dock-effect" style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
+            <img style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
         </a>
 
-        <!-- COMPANY TRAINING with Dock Effect -->
+        <!-- COMPANY TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948089" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 420px; left: 190px; width: 96px; height: 24px;" title="Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/F708BC7C-4822-20CC-AC34-1934BBBE9832.png" alt="Company Training">
+            <img style="position: absolute; top: 420px; left: 190px; width: 96px; height: 24px;" title="Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/F708BC7C-4822-20CC-AC34-1934BBBE9832.png" alt="Company Training">
         </a>
 
-        <!-- DRIVER TRAINING with Dock Effect -->
+        <!-- DRIVER TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948090" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 450px; left: 190px; width: 82px; height: 24px;" title="Driver Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AEA20159-72A8-173D-FF20-D9FB9B472905.png" alt="Driver Training">
+            <img style="position: absolute; top: 450px; left: 190px; width: 82px; height: 24px;" title="Driver Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AEA20159-72A8-173D-FF20-D9FB9B472905.png" alt="Driver Training">
         </a>
 
-        <!-- HAZMAT with Dock Effect -->
+        <!-- HAZMAT -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948092" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 480px; left: 190px; width: 91px; height: 24px;" title="Hazmat" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AF2EC452-67F2-6465-8D82-C899FF79C219.png" alt="Hazmat">
+            <img style="position: absolute; top: 480px; left: 190px; width: 91px; height: 24px;" title="Hazmat" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/AF2EC452-67F2-6465-8D82-C899FF79C219.png" alt="Hazmat">
         </a>
 
-        <!-- OFFICER TRAINING with Dock Effect -->
+        <!-- OFFICER TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=1948093" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 510px; left: 190px; width: 95px; height: 24px;" title="Officer Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E124536-7ADD-03D8-3985-9249D3CB60E6.png" alt="Officer Training">
+            <img style="position: absolute; top: 510px; left: 190px; width: 95px; height: 24px;" title="Officer Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E124536-7ADD-03D8-3985-9249D3CB60E6.png" alt="Officer Training">
         </a>
 
-        <!-- NON-ISO with Dock Effect -->
+        <!-- NON-ISO -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=2484801" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 540px; left: 150px; width: 177px; height: 24px;" title="Non-ISO" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/7401D0DF-9921-2EED-27F6-BA85F825D6A5.png" alt="Non-ISO">
+            <img style="position: absolute; top: 540px; left: 150px; width: 177px; height: 24px;" title="Non-ISO" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/7401D0DF-9921-2EED-27F6-BA85F825D6A5.png" alt="Non-ISO">
         </a>
 
-        <!-- MULTI-AGENCY COMPANY TRAINING with Dock Effect -->
+        <!-- MULTI-AGENCY COMPANY TRAINING -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_assignments.showRcaSelectUsers&courseIDList=2504349" target="_top">
-            <img class="dock-effect" style="position: absolute; top: 570px; left: 125px; width: 255px; height: 24px;" title="Multi-Agency Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E6A964F-7C95-A9A4-3A64-84488264B3E0.png" alt="Multi-Agency Company Training">
+            <img style="position: absolute; top: 570px; left: 125px; width: 255px; height: 24px;" title="Multi-Agency Company Training" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5E6A964F-7C95-A9A4-3A64-84488264B3E0.png" alt="Multi-Agency Company Training">
         </a>
 
         <!-- FLEET MAINTENANCE REQUEST -->
         <a href="https://palmcoastfl.fasterwebcloud.com/FASTER/Portal/login/default.aspx" target="_blank" rel="noopener">
-            <img class="dock-effect" style="position: absolute; top: 695px; left: 36px; width: 296px; height: 24px;" title="Fleet Maintenance Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/372A95C8-5C05-CD67-97A6-BC75E3DE7932.png" alt="Fleet Maintenance Request">
+            <img style="position: absolute; top: 695px; left: 36px; width: 296px; height: 24px;" title="Fleet Maintenance Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/372A95C8-5C05-CD67-97A6-BC75E3DE7932.png" alt="Fleet Maintenance Request">
         </a>
 
-        <!-- YOUTUBE LINK with Shake Effect Arrows -->
+        <!-- SCBA HARNESS REPAIR REQUEST -->
+        <a href="http://centrality/Fire/scbaharnesses" target="_top">
+            <img style="position: absolute; top: 725px; left: 36px; width: 309px; height: 24px;" title="SCBA Harness Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/66D730C0-81D3-22A2-6921-A65A78DBD355.png" alt="SCBA Harness Repair Request">
+        </a>
+
+        <!-- CENTRALITY -->
+        <a href="http://centrality.ci.palm-coast.fl.us/" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 755px; left: 36px; width: 133px; height: 24px;" title="Centrality" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/E835CDDE-79A6-4686-A016-E0CAE74ECD9E.png" alt="Centrality">
+        </a>
+
+        <!-- SMALL EQUIPMENT REPAIR REQUEST -->
+        <a href="http://centrality/Forms/Fire/PrevMaintenance" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 785px; left: 36px; width: 360px; height: 24px;" title="Small Equipment Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A2A1E29F-658D-5653-52DD-D045EF12B504.png" alt="Small Equipment Repair Request">
+        </a>
+
+        <!-- PEER SUPPORT -->
+        <a href="https://s3.amazonaws.com/tsresources.targetsolutions.com/D4898E15-FA6F-356B-6EC4-FBCA63906713.png" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 1210px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support">
+        </a>
+
+        <!-- CRITICAL INCIDENT EXPOSURE -->
+        <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_custom_activities.showUserCustomActivity&navIDs=1,7&credentialID=271617&courseID=1255585&oTID=578792" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 1240px; left: 36px; width: 311px; height: 24px;" title="Critical Incident Exposure" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/45434530-0AEC-50EF-CD8B-7ECF7FA9E3D9.png" alt="Critical Incident Exposure">
+        </a>
+
+        <!-- FCDICE -->
+        <a href="https://floridastatefirecollege.org/public/pb_index.asp" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
+        </a>
+
+        <!-- UNIFORM STORE -->
+        <a href="https://designlabonline.net/pcf/" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
+        </a>
+
+        <!-- MD Anderson -->
+        <a href="https://garnold91.wixsite.com/dash/cancer" target="_top">
+            <img style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/298FFD17-2DF4-22F2-B307-24A162E52DB2.gif" alt="MD Anderson">
+        </a>
+
+        <!-- SOP Standard Operating Guidelines -->
+        <a href="https://centrality.ci.palm-coast.fl.us/employeedashboard/home/fire" target="_blank" rel="noopener">
+            <img style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
+        </a>
+
+        <!-- YOUTUBE LINK -->
         <div class="video-carousel" style="position: absolute; top: 920px; left: 12px;">
             <!-- Controls with custom arrows and centered text -->
             <div class="controls" style="position: relative; width: 395px; height: 30px; display: flex; justify-content: center; align-items: center; top: -35px;">
                 <!-- Custom left arrow image with shake effect -->
-                <button id="prevBtn" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
-                    <img class="shake-effect" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/777D4B81-C29D-C906-AC86-F16E4F03CE36.png" alt="Previous" style="width: 50px; height: 30px;">
+                <button id="prevBtn" class="shake" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
+                    <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/777D4B81-C29D-C906-AC86-F16E4F03CE36.png" alt="Previous" style="width: 50px; height: 30px;">
                 </button>
 
                 <!-- Image in between the arrows -->
                 <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/CAA4DB3C-86CD-ABDC-0B58-20634957127D.png" alt="Scroll" style="height: 30px;">
 
                 <!-- Custom right arrow image with shake effect -->
-                <button id="nextBtn" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
-                    <img class="shake-effect" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A79DFC11-1CED-7682-028F-B57064C4A9E0.png" alt="Next" style="width: 50px; height: 30px;">
+                <button id="nextBtn" class="shake" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
+                    <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A79DFC11-1CED-7682-028F-B57064C4A9E0.png" alt="Next" style="width: 50px; height: 30px;">
                 </button>
             </div>
 
@@ -138,6 +181,7 @@
     <script>
         const videos = [
             'https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1',
+            // Replace 'video2' and 'video3' with actual video links
             'https://www.youtube.com/embed/uzWJngpIbRY?cc_load_policy=1',
             'https://www.youtube.com/embed/dC8dC8-ZAoU?cc_load_policy=1'
         ];
