--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin Board</title>
     <style>
-        /* MacBook Dock scroll effect */
+        /* Dock scroll effect */
         a img:hover {
-            transform: scale(1.5);
-            transition: transform 0.3s ease;
+            transform: scale(1.1);
+            transition: transform 0.1s ease;
         }
         a img {
             transition: transform 0.3s ease;
