--- a/index.html
+++ b/index.html
@@ -131,14 +131,4 @@
 
             <!-- FCDICE -->
             <a href="https://floridastatefirecollege.org/public/pb_index.asp" target="_blank" rel="noopener">
-                <img style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
-            </a>
-
-            <!-- UNIFORM STORE -->
-            <a href="https://designlabonline.net/pcf/" target="_blank" rel="noopener">
-                <img style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
-            </a>
-
-            <!-- MD Anderson -->
-            <a href="https://garnold91.wixsite.com/dash/cancer" target="_top">
-                <img style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources
+                <img style="position: absolute; top: 1360px; left: 36px; width:
