--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         </a>
 
         <!-- WATER LOG -->
-        <a href="" target="_blank" rel="noopener">
+        <a href="https://1drv.ms/x/c/e943a2e40708e21e/ER7iCAfkokMggOlsAQAAAAABwszWNviea8MiYutXgL92nA?e=unFhza" target="_blank" rel="noopener">
             <img style="position: absolute; top: 245px; left: 37px; width: 123px; height: 24px;" title="Water Log" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/23326F03-23B2-B60B-29AB-33B242A9A9C6.png" alt="Water Log">
         </a>
 
         <!-- BGL MONDAYS -->
-        <a href="" target="_blank" rel="noopener">
-            <img style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
+        <a href="https://1drv.ms/x/c/e943a2e40708e21e/EeBxn2sJhqBLs0RwwSIr18kBwAJzbrbvC6t12iggcI2tdg?e=MZ2v5Q" target="_blank" rel="noopener">
+             <img style="position: absolute; top: 275px; left: 37px; width: 147px; height: 24px;" title="BGL Mondays" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A7981197-EA94-3CD3-92E9-5138C2D4D728.png" alt="BGL Mondays">
         </a>
 
         <!-- COMPANY TRAINING -->
