--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
       const video = document.getElementById('myVideo');
       const hls = new Hls();
       // Replace with a stable .m3u8 URL that doesn't expire
-      const m3u8Url = 'https://example.com/path/to/playlist.m3u8';
+      const m3u8Url = 'hhttps://167-d5.divas.cloud/CHAN-6316/CHAN-6316_1.stream/playlist.m3u8?204.145.118.4&amp;vdswztokenhash=MJRRC3cdwKbNhpzmcvBrRwNx036n7opSAge3pq_PuO4=';
 
       hls.loadSource(m3u8Url);
       hls.attachMedia(video);
