--- a/test.html
+++ b/test.html
@@ -1,33 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My HLS Stream</title>
-  <!-- Load hls.js from a CDN -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Florida 511 Camera Feed</title>
+  <!-- Include hls.js from CDN for HLS support in non-Safari browsers -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    video {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-  <video id="myVideo" controls autoplay muted playsinline></video>
+  <!-- Video element for the camera feed -->
+  <video id="777-video_html5_api" class="vjs-tech" preload="auto" autoplay
+         data-setup='{ "controls": true }'
+         tabindex="-1"
+         src="blob:https://fl511.com/e09eecff-3ae8-48f5-9fe5-b0c3d6fe2f51">
+    <source src="https://167-d5.divas.cloud/CHAN-6316/CHAN-6316_1.stream/playlist.m3u8?204.145.118.4&vdswztokenhash=MJRRC3cdwKbNhpzmcvBrRwNx036n7opSAge3pq_PuO4=" type="application/x-mpegURL">
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video.
+    </p>
+  </video>
 
   <script>
-    if (Hls.isSupported()) {
-      const video = document.getElementById('myVideo');
-      const hls = new Hls();
-      // Replace with a stable .m3u8 URL that doesn't expire
-      const m3u8Url = 'hhttps://167-d5.divas.cloud/CHAN-6316/CHAN-6316_1.stream/playlist.m3u8?204.145.118.4&amp;vdswztokenhash=MJRRC3cdwKbNhpzmcvBrRwNx036n7opSAge3pq_PuO4=';
+    // Get the video element and the HLS stream URL from the <source> element
+    const video = document.getElementById('777-video_html5_api');
+    const hlsSource = video.querySelector('source').src;
 
-      hls.loadSource(m3u8Url);
+    // Check if Hls.js is supported (for most browsers except Safari)
+    if (Hls.isSupported()) {
+      const hls = new Hls();
+      hls.loadSource(hlsSource);
       hls.attachMedia(video);
       hls.on(Hls.Events.MANIFEST_PARSED, function() {
         video.play();
       });
     } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-      // Safari: HLS should work natively
-      video.src = 'https://example.com/path/to/playlist.m3u8';
+      // For Safari, which supports HLS natively
+      video.src = hlsSource;
       video.addEventListener('loadedmetadata', function() {
         video.play();
       });
     } else {
-      // No HLS support
       console.error('This browser does not support HLS.');
     }
   </script>
