--- a/test1.html
+++ b/test1.html
@@ -1,8 +1,26 @@
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcoloradodot&tabs=timeline&width=500&height=1500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true"
-        width="500"
-        height="1500"
-        style="border:none;overflow:hidden"
-        scrolling="no"
-        frameborder="0"
-        allow="encrypted-media; picture-in-picture; web-share">
-</iframe>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0">
+    </script>
+
+    <div class="fb-page"
+         data-href="https://www.facebook.com/facebook"
+         data-tabs="timeline"
+         data-width=""
+         data-height=""
+         data-small-header="true"
+         data-adapt-container-width="true"
+         data-hide-cover="true"
+         data-show-facepile="false">
+      <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
+        <a href="https://www.facebook.com/facebook">Facebook</a>
+      </blockquote>
+    </div>
+  </body>
+</html>
